Added Chapters 8-11 of DA 30, plus misc. corrections.

--- a/01_agama/dirgha/DA_30-1.md
+++ b/01_agama/dirgha/DA_30-1.md
@@ -61,7 +61,7 @@ The monks said to the Buddha, “Indeed, Bhagavān, now would be a good time! We
 15\. “The gold trees have gold roots and limbs and silver leaves, flowers, and fruit. The silver trees have silver roots and limbs and gold leaves, flowers, and fruit. The crystal trees have crystal roots and limbs and beryl leaves, flowers[, and fruit]. The beryl trees have beryl roots and limbs and crystal leaves, flowers[, and fruit]. The ruby trees have ruby roots and limbs and emerald leaves, flowers[, and fruit]. The emerald trees have emerald roots and limbs and ruby leaves, flowers[, and fruit]. The coral trees have coral roots and limbs and leaves, flowers[, and fruit] made of many treasures.
 {:#p15}
 
-16\. “Each of the seven walls has four gates. The gates have balustrades, and towers and lookouts are above the seven walls. They’re surrounded by scenic parks and lakes where myriad precious flowers and plants grow. The rows of treasure trees are full with flowers and fruit, and they produce fragrances that blow in the four directions to the delight of passersby. Ducks, geese, cakras, and other rare kinds of birds in countless thousands sing peacefully to each other.
+16\. “Each of the seven walls has four gates. The gates have balustrades, and towers and terraces are above the seven walls. They’re surrounded by scenic parks and lakes where myriad precious flowers and plants grow. The rows of treasure trees are full with flowers and fruit, and they produce fragrances that blow in the four directions to the delight of passersby. Ducks, geese, cakras, and other rare kinds of birds in countless thousands sing peacefully to each other.
 {:#p16}
 
 17\. “Furthermore, halfway up Sumeru the mountain king, the stairways are forty yojanas wide. On both sides, the path is bordered by seven walls, seven balustrades, seven nettings, and seven rows of trees … Countless birds of many kinds sing peacefully to each other as they do at the lower stairways.
