--- a/01_agama/dirgha/DA_30-6.md
+++ b/01_agama/dirgha/DA_30-6.md
@@ -76,7 +76,7 @@ next: DA_30-7.html
 21\. “When the Asura King [Rāhu] wants to go sightseeing at Śāla Park, he thinks of Asura King Vemacitrin. Asura King Vemacitrin then thinks, ‘Asura King Rāhu is thinking of me now!’ He gets himself ready and rides a treasure chariot to Asura King Rāhu while surrounded by a countless assembly of servants. He goes before the Asura King and then stands to one side.
 {:#p21}
 
-22\. “The Asura King also thinks of Asura King \*Parāhu. Asura King \*Parāhu also thinks to himself, ‘King [Rāhu] is thinking of me now!’ He gets himself ready and rides a treasure chariot to Asura King Rāhu while surrounded by a countless assembly of servants. He goes before the Asura King and then stands to one side.
+22\. “The Asura King also thinks of Asura King \*Prahata. Asura King \*Prahata also thinks to himself, ‘King [Rāhu] is thinking of me now!’ He gets himself ready and rides a treasure chariot to Asura King Rāhu while surrounded by a countless assembly of servants. He goes before the Asura King and then stands to one side.
 {:#p22}
 
 23\. “The Asura King also thinks of Asura King Śambara. Asura King Śambara then thinks to himself, ‘King [Rāhu] is thinking of me now!’ He gets himself ready and rides a treasure chariot to Asura King Rāhu while surrounded by a countless assembly of servants. He goes before the Asura King and then stands to one side.
