--- a/01_agama/dirgha/DA_30-7.md
+++ b/01_agama/dirgha/DA_30-7.md
@@ -4,7 +4,7 @@ title: The Long Discourses | 30. Description of the World | Chapter 7. The Four 
 type: kramdown
 base: ../../
 previous: DA_30-6.html
-next: index.html
+next: DA_30-8.html
 ---
 # [The Long Discourses](index.html)
 ## 30. Description of the World
