--- a/01_agama/samyukta/19/SA19_15.md
+++ b/01_agama/samyukta/19/SA19_15.md
@@ -26,10 +26,10 @@ next: ../25/index.html
 5\. “The four god kings then visit the Dharma assembly of the Thirty-Three Gods in their meeting hall. They say to Śakra the Lord of Gods, ‘God king, you should know that there aren’t many people present in the world who support their parents … accept the precepts at the poṣadha.’
 {:#p5}
 
-6\. “The assembly of Thirty-Three Gods isn’t please when they hear this, and they in turn tell each other, ‘The people present in the world aren’t virtuous, good, beautiful, and fine. None truly practice, and they don’t support their parents … accept the precepts at the poṣadha. As a result of their misdeeds, the host of gods will diminish and the host of asuras will slowly grow.’
+6\. “The assembly of Thirty-Three Gods isn’t pleased when they hear this, and they in turn tell each other, ‘The people present in the world aren’t virtuous, good, beautiful, and fine. None truly practice, and they don’t support their parents … accept the precepts at the poṣadha. As a result of their misdeeds, the host of gods will diminish and the host of asuras will slowly grow.’
 {:#p6}
 
-7\. [296b] “Monks, suppose at that point there were many people who support their parents … accept the precepts at the poṣadha. The four god kinds would visit the assembly of the Thirty-Three Gods in their meeting hall and tell Śakra the Lord of Gods, ‘God king, you should know that there are many people present in the world who support their parents … accept the precepts at the poṣadha.’
+7\. [296b] “Monks, suppose at that point there were many people who support their parents … accept the precepts at the poṣadha. The four god kings would visit the assembly of the Thirty-Three Gods in their meeting hall and tell Śakra the Lord of Gods, ‘God king, you should know that there are many people present in the world who support their parents … accept the precepts at the poṣadha.’
 {:#p7}
 
 8\. “The hearts of the thirty-three gods then rejoice, and they in turn tell each other, ‘There’s many people present in the world who are noble and truly follow the Dharma. They support their parents … accept the precepts at the poṣadha. As a result of their merits, the host of asuras will diminish and the host of gods will grow.’
@@ -57,7 +57,7 @@ Their cultivation is likewise!’
 
 “This is not well spoken. Why is that? That Śakra the Lord of Gods himself has disturbances of craving, dislike, and delusion, and he isn’t freed from birth, old age, illness, death, grief, sorrow, pain, and trouble.
 
-11\. “Monks, if an arhat who has ended the contaminants, accomplished the task, has discarded the heavy burdens, cut the bonds of existence, and who’s mind is well liberated speaks this verse:
+11\. “Monks, suppose an arhat who has ended the contaminants, accomplished the task, has discarded the heavy burdens, cut the bonds of existence, and who’s mind is well liberated speaks this verse:
 {:#p11}
 
 * {:.verse}“‘Suppose on the eighth, fourteenth,\\
@@ -80,7 +80,7 @@ Their cultivation is likewise!’
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 13 June 2022
+Last Revised: 28 June 2022
 {: .revised}
 
 ---
