Added Chapter 12 of DA 30.

--- a/01_agama/dirgha/DA_30-11.md
+++ b/01_agama/dirgha/DA_30-11.md
@@ -4,7 +4,7 @@ title: The Long Discourses | 30. Description of the World | Chapter 11. Three Me
 type: kramdown
 base: ../../
 previous: DA_30-10.html
-next: index.html
+next: DA_30-12.html
 ---
 # [The Long Discourses](index.html)
 ## 30. Description of the World
