--- a/01_agama/dirgha/DA_30-12.md
+++ b/01_agama/dirgha/DA_30-12.md
@@ -461,7 +461,7 @@ Are the best among gods and humans!”
 132\. Thereupon, the monks who heard what the Buddha taught rejoiced and approved.
 {:#p132}
 
-133\. *The *Long Discourses* is complete. I take refuge in all knowledge and the happiness of all beings. May sentient beings dwell in the unconditioned, and let me be an example for them!*
+133\. The Long Discourses *is complete. Homage to all knowledge and the happiness of all beings. May sentient beings dwell in the unconditioned, and let me be an example for them!*
 {:#p133}
 
 ---
