Corrected translation of 中劫 in DA 30-11.

--- a/01_agama/dirgha/DA_30-11.md
+++ b/01_agama/dirgha/DA_30-11.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: The Long Discourses | 30. Description of the World | Chapter 11. Three Medium Eons
+title: The Long Discourses | 30. Description of the World | Chapter 11. Three Interim Eons
 type: kramdown
 base: ../../
 previous: DA_30-10.html
@@ -8,9 +8,9 @@ next: DA_30-12.html
 ---
 # [The Long Discourses](index.html)
 ## 30. Description of the World
-### Chapter 11: Three Medium Eons
+### Chapter 11: Three Interim Eons
 
-1\. The Buddha told the monks, “There are three medium eons. What are the three? The first is called the eon of warfare, the second is called the eon of famine, and the third is called the eon of plague.
+1\. The Buddha told the monks, “There are three interim eons. What are the three? The first is called the eon of warfare, the second is called the eon of famine, and the third is called the eon of plague.
 {:#p1}
 
 #### The Eon of Warfare
