--- a/01_agama/dirgha/DA_18.md
+++ b/01_agama/dirgha/DA_18.md
@@ -58,7 +58,7 @@ He replied, “I don’t know them.”
 
 “This teaching is unsurpassed, and nothing goes beyond it. His wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could any arise who surpass him?
 
-13\. “The Dharma that the Tathāgata teaches has another superiority, which is the path. The path refers to this: Ascetics and priests use the various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they cultivate the awakening factor of mindfulness, which relies on [the lack of] desire, relies on seclusion [from desire], relies on extinguishment [of desire], and relies on the escape [from desire] … they cultivate the awakening factor of the teachings … effort … joy … calm … samādhi … equanimity, which relies on desire, relies on seclusion, relies on extinguishment, and relies on the escape.
+13\. “The Dharma that the Tathāgata teaches has another superiority, which is the path. The path refers to this: Ascetics and priests use the various methods to enter a fixed samādhi of mind. Following that samādhi of mind, they cultivate the awakening factor of mindfulness, which relies on [the lack of] desire, relies on seclusion [from desire], relies on extinguishment [of desire], and relies on the escape [from desire] … they cultivate the awakening factor of the teachings … effort … joy … calm … samādhi … equanimity, which relies on [the lack of] desire, relies on seclusion, relies on extinguishment, and relies on the escape.
 {:#p13}
 
 “This teaching is unsurpassed, and nothing goes beyond it. His wisdom is complete, and his miraculous ability is complete. None of the world’s ascetics and priests can match the Tathāgata. How could any arise who surpass him?
