Edited SA 35.1 and corrected format of a verse in DA 2.

--- a/01_agama/samyukta/35/SA35_1.md
+++ b/01_agama/samyukta/35/SA35_1.md
@@ -14,43 +14,47 @@ next: SA35_7.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that ties and becomes an attachment, and that’s viewed as self and causes sentient beings to be covered by ignorance, to take craving as their forerunner, to rush down the long road, to spin on the wheel of birth and death, to circulate in birth and death, and to not know the ultimate end?”
-The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge. Please let him have sympathy and explain its meaning in detail! After they hear it, the monks will accept and approve of it.”
+2\. It was then that the Bhagavān addressed the monks, “Because what exists, what is caused, adhering to what, and viewing what as self are sentient beings covered by ignorance and then take craving as their leader, rush down the long road, turn on the wheel of birth-and-death, circulate in birth-and-death, and don’t know an ultimate end?”
+
+The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge! Please have pity and explain this subject in detail! After hearing it, we monks will accept and approve of that explanation.”
 {: #p2}
 
-3\. The Buddha told the monks, “Listen closely and well consider it. I will explain it for you.
+3\. The Buddha told the monks, “Listen closely, and consider it well! I will explain this for you.
 {: #p3}
 
-“Monks, it’s because form exists, because something of form arises, and because form ties and becomes an attachment that form is viewed as self. That causes sentient beings to be covered by ignorance, to take craving as their forerunner, to rush down a long road, to spin on the wheel of birth and death, to circulate in birth and death, and to not know the ultimate end. Feeling, conception, volition, and consciousness are likewise.
+“Monks, because form exists, form causes something, they adhere to form, and form is viewed as self, sentient beings are covered by ignorance and then take craving as their leader, rush down the long road, turn on the wheel of birth-and-death, circulate in birth-and-death, and don’t know an ultimate end. Feeling, conception, volition, and consciousness are likewise.
 
 4\. “Monks, is form permanent, or is it impermanent?”
 {: #p4}
 
-They replied, “Impermanent, Bhagavān.”
+“Impermanent, Bhagavān.”
 
-5\. Again, he asked, “If something is impermanent, is it painful?”
-They replied, “It’s painful, Bhagavān.”
+5\. He again asked, “If something is impermanent, is it painful?”
+
+“It’s painful, Bhagavān.”
 {: #p5}
 
-6\. “So it is, monks. If something is impermanent, it’s painful. Because of this painful existence, things arise. They tie and become attachments, and they’re viewed as self. That causes sentient beings to be covered by ignorance, to take craving as their forerunner, to rush down a long road, to spin on the wheel of birth and death, to circulate in birth and death, and to not know the ultimate end. Feeling, conception, volition, and consciousness are likewise.
+6\. “So it is, monks. If something is impermanent, it’s painful. Because this pain exists, the things it causes, its adherence, and its being viewed as self, sentient beings are covered by ignorance and then take craving as their leader, rush down the long road, turn on the wheel of birth-and-death, circulate in birth-and-death, and don’t know its ultimate end.
+
+*Feeling, conception, volition, and consciousness are likewise.*
 {: #p6}
 
-7\. “Therefore, monks, all form that exists [42a] in the past, future, and present, whether internal or external, crude or fine, attractive or ugly, and far or near are all not self, not other than self, and not both. This is called correct wisdom. Feeling, conception, volition, and consciousness are likewise.
+7\. “Therefore, monks, all forms that exist, whether past, future, or present, internal or external, coarse or fine, beautiful or ugly, or distant or near are not self, not different than self, nor are either present in the other. This is called correct wisdom. *Feeling, conception, volition, and consciousness are likewise.*
 {: #p7}
 
-8\. “Thus, what’s seen, heard, realized, recognized, and investigated with thought, perception, and examination is all not self, not other than self, and not both. This is called right wisdom.
+8\. “Thus, all that’s seen, heard, realized, recognized, sought, attained, remembered, considered, or examined[\[2\]](#n2){:#ref2} is not self, not different than self, nor are either present in other. This is called correct wisdom.
 {: #p8}
 
-9\. “Suppose there’s a view that says, ‘There is self, there is the world, there is this life. They are permanent, eternal, and not subject to change.’ All that is not self, not other than self, and not both. This is called right wisdom.
+9\. “Suppose there’s a view that says, ‘There’s a self, there’s the world, and there’s this life. They are permanent, eternal, and not subject to change.’ All of those things are not self, not different than self, nor are either present in the other. This is called correct wisdom.
 {: #p9}
 
-10\. “Suppose there’s another view: ‘That’s not this self, doesn’t belong to this self, isn’t a future self, and won’t belong to a future self.’ All that is not self, not other than self, and not both. This is called right wisdom.
+10\. “Again, suppose there’s this view: ‘That’s not this self, doesn’t belong to this self, isn’t a future self, and won’t belong to a future self.’ All of those things are not self, not different than self, nor are either present in the other. This is called correct wisdom.
 {: #p10}
 
-11\. “If a well-versed noble disciple observes these six abodes of views as not self and not belonging to self, then observing in this way ends suspicions about the Buddha and ends suspicions about the teaching and community.
+11\. “Suppose that a well-versed noble disciple observes these six abodes of views as not self and not belonging to self. Someone who observes them in this way ends suspicions about the Buddha and ends suspicions about the Dharma and Saṅgha.
 {: #p11}
 
-12\. “Monks, this is called the well-versed noble disciple who is no longer capable of doing physical, verbal, or mental acts that head for the three bad destinies. Even if he’s negligent, this noble disciple is certainly headed for complete awakening. Within seven rebirths in heaven or among humans, they’ll reach the limit of suffering.”
+12\. “Monks, this is called a well-versed noble disciple who is no longer capable of doing physical, verbal, or mental deeds that lead to the three bad destinies. Even if he’s negligent, this noble disciple is certainly headed for complete awakening. With seven rebirths in heaven or among humans, they’ll reach the limit of suffering.”
 {: #p12}
 
 13\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -58,13 +62,15 @@ They replied, “It’s painful, Bhagavān.”
 
 ### Notes
 
-1. {:#n1} This sūtra is parallel with the six abodes of views section of [MN 22](https://suttacentral.net/mn22){:target="_blank"} and [MĀ 200](../../madhyama/MA_200.html){:target="_blank"}. [\[back\]](#ref1)
+1. {:#n1} This sutra has a similar format as [SN 22.150-158](https://suttacentral.net/sn22.150){:target="_blank"} and [SN 24](https://suttacentral.net/sn24){:target="_blank"}, but it doesn’t have a direct parallel among them. Instead, it takes up the six abodes of views found in [MN 22](https://suttacentral.net/mn22){:target="_blank"} and [MĀ 200](..\..\madhyama\MA_200.html){:target="_blank"}. As we shall see, this sets the tone for the remainder of this Saṃyukta, which segues to sutras about specific views like the suttas that make up [SN 24](https://suttacentral.net/sn24){:target="_blank"}. [\[back\]](#ref1)
+
+2. {:#n2} *remembered, considered, examined*. Ch. 隨憶、隨覺、隨觀. I surmise that the Indic original probably read: *anusmṛ-*, *anuvitark-*, *anuvicār-*, meaning roughly, “remembered,” “(initially) considered,” and “(thoroughly) examined.” Note how the Chinese translator uses 覺 for vitarka here as he would in the dhyāna formula, perhaps attempting indicate a shallow or initial consideration. “Perceiving” doesn’t really fit this context given the items covering it at the beginning of the list. [\[back\]](#ref2)
 
 ---
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 5 September 2022
 {: .revised}
 
 ---
